<resources>
    <string name="app_name">Safiri</string>
    <string name="title_activity_login">Sign in</string>

    <string name="navigation_view_header_title">Safiri</string>

    <!-- Menu Strings -->
    <string name="action_logout">Logout</string>

    <!--

     == Login and Create Account Strings ==

      -->

    <string name="sync_account_type">safiri.lighteye.com</string>
    <string name="content_authority">com.lighteye.safiri</string>


    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>

    <string name="add_booking_detail">New Booking Detail</string>
    <string name="edit_booking_detail">Edit Booking Detail</string>

    <string name="select_seat">Select Seat</string>
    <string name="change_seat">Change Seat</string>


    <string name="menu_save_booking">Save</string>
    <string name="menu_cancel_booking">Cancel</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>


    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>


    <string name="positive_button_select">Select</string>

    <string name="loading_organizations_error">Error while loading organizations</string>

    <string name="organizations_title">Organizations</string>
    <string name="todays_title">Today</string>
    <string name="search_bookings_title">Search Routes</string>
    <string name="my_bookings_title">My Bookings</string>
    <string name="settings_title">Settings</string>

    <string name="origin_text">Select Where From</string>
    <string name="destination_text">Select Destination</string>


    <string name="traveller_name">Traveller Name</string>
    <string name="delete_booking_detail_button">Delete Booking Detail</string>

    <string name="organization_title">Organization</string>
    <string name="route_title">Route</string>
    <string name="origin_title">Origin</string>
    <string name="destination_title">Destination</string>
    <string name="departure_time_title">Departure Time</string>
    <string name="travel_date_tile">Travel Date</string>
    <string name="booking_details_title">Booking Details</string>

    <string name="address_title">Address</string>
    <string name="town_title">Town</string>
    <string name="contacts_title">Contacts</string>

    <string name="empty_bookings_text">No Bookings Available</string>

    <string name="empty_travel_routes_text">No Travel Routes Available</string>

    <string name="organization_branches_title">Branches</string>

    <string name="booking_seat_label">Seat</string>

    <string name="booking_price_label">Price</string>

    <string name="to">to</string>

    <string name="from">From</string>

    <string name="seats">Seats</string>

    <string name="todays_routes">Today Routes</string>

    <string name="safiri_logo">Safiri Logo</string>

    <string name="select_date_button">Select Date Button</string>

    <string name="select_seat_button">Select Seat Button</string>

    <string name="search_button_text">Search</string>

    <string name="booked_seats">Booked</string>
    <string name="available_seats">Available</string>

    <string name="selected_seat">Selected Seat</string>

    <string name="save_button">Save</string>

    <string name="error_message_select_seat">You must Select Your Preferred Seat</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>


    <string name="contacts">Contacts</string>

    <!-- Shopping Mode -->
    <string name="button_stop_shopping">Stop Shopping</string>
    <string name="button_start_shopping">Start Shopping</string>

    <string name="text_you_are_shopping">You are shopping</string>
    <string name="text_you_and_other_are_shopping">You and %s are shopping</string>
    <string name="text_you_and_number_are_shopping">You and %d others are shopping</string>

    <string name="text_other_is_shopping">%s is shopping</string>
    <string name="text_other_and_other_are_shopping">%1$s and %2$s are shopping</string>
    <string name="text_other_and_number_are_shopping">%1$s and %2$d others are shopping</string>

    <string name="bought_by">Bought by</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
