<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="16dp">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/town_title" />

    <TextView
        android:id="@+id/branch_town"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/address_title" />

    <TextView
        android:id="@+id/branch_address"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/contacts_title" />

    <TextView
        android:id="@+id/branch_contacts"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

</GridLayout>