<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="16dp">

                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/from"/>

                <Spinner
                    android:id="@+id/origin_spinner_input"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="fill_horizontal"/>

                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/to"/>

                <Spinner
                    android:id="@+id/destination_spinner_input"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="fill_horizontal"/>

                <TextView
                    android:layout_row="2"
                    android:layout_column="0"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/travel_date_tile"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_row="2"
                    android:layout_column="1"
                    android:orientation="horizontal"
                    android:layout_gravity="fill_horizontal|center_vertical">

                    <TextView
                        android:id="@+id/travel_date_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" android:padding="4dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/select_travel_date_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/select_date_button"
                        android:src="@drawable/ic_date_range"/>

                </LinearLayout>

                <Button
                    android:id="@+id/submit_search_button"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="fill_horizontal"
                    android:textColor="@android:color/white"
                    android:text="@string/search_button_text"/>

            </GridLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
</merge>