<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="2dp"
    android:elevation="4dp">

    <GridLayout
        android:id="@+id/organization_row_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp">

        <TextView
            android:id="@+id/organization_title"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/address_title" />

        <TextView
            android:id="@+id/organization_address"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/town_title" />

        <TextView
            android:id="@+id/organization_town"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/contacts_title" />

        <TextView
            android:id="@+id/organization_contacts"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

    </GridLayout>

</android.support.v7.widget.CardView>