<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="16dp"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/booking_detail_traveller"
        android:layout_row="0"
        android:layout_column="0"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_row="1"
        android:layout_column="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/booking_seat_label"/>

        <TextView
            android:id="@+id/booking_detail_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            android:text="@string/booking_price_label"/>
        <TextView
            android:id="@+id/booking_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>



    <ImageButton
        android:id="@+id/delete_booking_detail_button"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_vertical|right"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_booking_detail_button"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/booking_detail_status"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="right"
        android:textStyle="italic"
        android:textColor="@android:color/black"/>


</GridLayout>