<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:padding="16dp">

                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/traveller_name"/>

                <EditText
                    android:id="@+id/booking_detail_traveller_input"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"/>

                <TextView
                    android:layout_row="2"
                    android:layout_column="0"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/selected_seat"/>

                <LinearLayout
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:orientation="horizontal"
                    android:layout_gravity="fill_horizontal|center_vertical">

                    <TextView
                        android:id="@+id/booking_detail_seat_input"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/select_seat_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/select_seat_button"
                        android:src="@drawable/ic_airline_seat_legroom_normal"/>

                </LinearLayout>

                <FrameLayout
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_height="2dp"
                    android:background="@color/grey"
                    android:layout_gravity="fill_horizontal">


                </FrameLayout>


                <Button
                    android:id="@+id/add_booking_detaill_button"
                    android:layout_row="4"
                    android:layout_columnSpan="3"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="fill_horizontal|center"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/save_button"/>

            </GridLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</merge>