<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="4dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:padding="16dp">

                <TextView
                    android:id="@+id/organization_details_title"
                    android:layout_row="0"
                    android:layout_columnSpan="2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/address_title" />

                <TextView
                    android:id="@+id/organization_details_address"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/town_title" />

                <TextView
                    android:id="@+id/organization_details_town"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/contacts_title" />

                <TextView
                    android:id="@+id/organization_details_contacts"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

            </GridLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/booking_details_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/organization_branches_title"
                        android:padding="16dp"/>

                </FrameLayout>

                <android.support.v7.widget.RecyclerView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/organization_branches_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</merge>